[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes & Fonts/Theme1.tres" type="Theme" id=1]
[ext_resource path="res://ForgotPassword/ForgotPassword.gd" type="Script" id=2]
[ext_resource path="res://Themes & Fonts/Theme2.tres" type="Theme" id=3]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="Btn_Send_Message" type="Button" parent="."]
margin_left = 350.0
margin_top = 800.0
margin_right = 883.0
margin_bottom = 845.0
rect_pivot_offset = Vector2( -1031.69, 601.398 )
theme = ExtResource( 1 )
text = "Отправить письмо с данными для смены пароля"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterEmail" type="TextEdit" parent="."]
margin_left = 70.0
margin_top = 500.0
margin_right = 1020.0
margin_bottom = 572.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TxtEmail" type="Label" parent="."]
margin_left = 90.235
margin_top = 461.199
margin_right = 350.235
margin_bottom = 492.199
theme = ExtResource( 1 )
text = "Адрес электронной почты:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Label" parent="."]
margin_left = 514.939
margin_top = 598.684
margin_right = 554.939
margin_bottom = 612.684
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Back_To_Login" type="Button" parent="."]
margin_left = 350.0
margin_top = 850.0
margin_right = 877.0
margin_bottom = 895.0
theme = ExtResource( 1 )
text = "Вернуться к меню входа"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Btn_Send_Message" to="." method="_on_Btn_Send_Message_pressed"]
[connection signal="pressed" from="Btn_Back_To_Login" to="." method="_on_Btn_Back_To_Login_pressed"]
